# bunnies

./: .gitignore  Cargo.toml  README.md  STYLE.md  perft_case.rs  rustfmt.toml
benches/: attack_generation.rs  perft.rs
crates/bunnies/: Cargo.toml  perft_case.rs
crates/bunnies-pgn/: Cargo.toml
crates/bunnies/benches/: perft.rs
crates/bunnies/src/: bitboard.rs  board.rs  castling.rs  castling_rights.rs  color.rs  colored_piece.rs  context.rs  double_pawn_push_file.rs  fen.rs  file.rs  flank.rs  game_state.rs  insufficient_material.rs  legal_gen_kind.rs  lib.rs  make_move.rs  move.rs  move_flag.rs  move_list.rs  movegen.rs  perft.rs  piece.rs  position.rs  rank.rs  san.rs  square.rs  typed_position.rs  validation.rs  zobrist.rs  zobrist_policy.rs
crates/bunnies/src/attacks/: magic.rs  manual.rs  mod.rs  precomputed.rs
crates/bunnies/src/attacks/magic/: initializer.rs  lookup.rs  magic_info.rs  mod.rs  random.rs  relevant_mask.rs
crates/bunnies/src/io/: san.rs
crates/bunnies/src/logic/: apply_move.rs  castling.rs  fen.rs  game_state.rs  insufficient_material.rs  make_move.rs  mod.rs  move_generation.rs  perft.rs  validation.rs  zobrist_hash.rs
crates/bunnies/src/logic/attacks/: magic.rs  manual.rs  mod.rs  precomputed.rs
crates/bunnies/src/move/: mod.rs  move_list.rs  san.rs
crates/bunnies/src/position/: fen.rs  game_state.rs  movegen.rs  struct.rs  validation.rs  zobrist.rs
crates/bunnies/src/types/: bitboard.rs  board.rs  castling_rights.rs  color.rs  colored_piece.rs  double_pawn_push_file.rs  file.rs  flank.rs  knight_move_direction.rs  mod.rs  move.rs  move_flag.rs  move_list.rs  piece.rs  position.rs  position_context.rs  position_with_zobrist.rs  position_without_zobrist.rs  queen_like_move_direction.rs  rank.rs  square.rs  square_delta.rs  square_delta_utils.rs  typed_position.rs  unified_move_direction.rs  with_zobrist.rs  without_zobrist.rs  zobrist_policy.rs
crates/bunnies/src/utilities/: array.rs  display.rs  iterable_enum.rs  mask_iterators.rs  mod.rs  move_direction.rs  random.rs  validation.rs
crates/bunnies/src/utils/: display.rs  mask_iterators.rs  mod.rs  move_direction.rs
crates/bunnies/tests/: one_type_per_file.rs  perft.rs
crates/uglychild/: Cargo.toml  perft_case.rs
crates/uglychild-pgn/: Cargo.toml
crates/uglychild/src/: lib.rs
crates/uglychild/src/logic/: game_state.rs  insufficient_material.rs  make_move.rs  mod.rs  move_generation.rs  perft.rs  san.rs  zobrist_hash.rs
crates/uglychild/src/logic/attacks/: magic.rs  precomputed.rs
crates/uglychild/src/types/: bitboard.rs  castling_rights.rs  color.rs  file.rs  knight_move_direction.rs  mod.rs  piece.rs  position.rs  queen_like_move_direction.rs  square.rs  typed_position.rs
crates/uglychild/src/utilities/: array.rs  iterable_enum.rs
src/: bitboard.rs  castling_rights.rs  charboard.rs  color.rs  colored_piece.rs  colored_piece_type.rs  file.rs  flank.rs  lib.rs  masks.rs  move_direction.rs  piece.rs  piece_type.rs  rank.rs  square.rs
src/attacks/: magic.rs  manual.rs  mod.rs  precomputed.rs
src/move/: flag.rs  mod.rs  move.rs  move_flag.rs  move_list.rs  san.rs  struct.rs
src/pgn/: buffered_position_brancher.rs  buffered_position_context.rs  error.rs  lexing.rs  (+27 more)
tests/: perft.rs
(+100 files in other folders)
