[package]
name = "bunnies"
version = "0.3.0"
edition = "2024"
description = "A fast chess library for chess engines."
authors = ["Vibhav Singamshetty <vibsingamshetty@gmail.com>"]
license = "MIT"
repository = "https://github.com/goodvibs/bunnies"
readme = "README.md"
keywords = ["chess", "fast", "move", "gen", "engine"]
categories = ["games", "mathematics"]

[dependencies]
rand = "0.9.0"
indexmap = "2.2.5"
fastrand = "2.3.0"
static_init = "1.0.3"
logos = "0.15.0"
regex = "1.11.1"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
lto = true

[[test]]
name = "perft"

[[bench]]
name = "attack_generation"
harness = false

[[bench]]
name = "perft"
harness = false