[package]
name = "bunnies"
version = "0.5.0"
edition = "2024"
description = "A fast chess library for fast chess engines."
authors = ["Vibhav Singamshetty <vibsingamshetty@gmail.com>"]
license = "MIT"
repository = "https://github.com/goodvibs/bunnies"
readme = "README.md"
keywords = ["chess", "fast", "move", "gen", "engine"]
categories = ["games", "mathematics"]

[dependencies]
indexmap = "2.14.0"
fastrand = "2.4.1"
logos = "0.16.1"
regex = "1.12.3"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
lto = true

[profile.profiling]
inherits = "release"
debug = true
lto = false
codegen-units = 256

[[test]]
name = "perft"

[[bench]]
name = "attacks"
harness = false

[[bench]]
name = "perft"
harness = false
