[workspace]
members = ["crates/bunnies", "crates/bunnies-pgn"]
resolver = "3"

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
rpath = false
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"

[profile.profiling]
inherits = "release"
debug = true
lto = false
codegen-units = 256
