[package]
name = "uglychild"
version = "0.5.0"
edition = "2024"
description = "A fast chess library for fast chess engines."
license = "MIT"
repository = "https://github.com/goodvibs/uglychild"
readme = "../../README.md"
keywords = ["chess", "fast", "move", "gen", "engine"]
categories = ["games", "mathematics"]
publish = false

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[test]]
name = "perft"

[[bench]]
name = "perft"
harness = false
